syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package="./pb";

message User{
  int32 id = 1;
  string email = 2;
  string password = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
  google.protobuf.Timestamp deleted_at = 6;

}

message CreateUserRequest{
  string email = 1;
  string password = 2;
}

message CreateUserResponse{
  int64 status = 1;
  string error = 2;

}

message LoginUserRequest{
  string email = 1;
  string password = 2;
}

message LoginUserResponse{
  int64 status = 1;
  string error = 2;
  string accesToken = 3;
  string refreshToken = 4;
}

message DeleteUserRequest {
  int32 id = 1;
}

message DeleteUserResponse {
}

message GetUserRequest {
  int32 id = 1;
}

message GetUserResponse {
  User user = 1;
}

message ValidateUserRequest {
  string accesToken = 1;
  string refreshToken = 2;
}

message ValidateUserResponse {
  int64 status = 1;
  string error = 2;
  int64 userId = 3;
  string accesToken = 4;
  string refreshToken = 5;
}

