syntax = "proto3";

package pb;

option go_package="./pb";

service UserService{
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse){}
  rpc GetUser(GetUserRequest) returns (GetUserResponse){}
}

message DeleteUserRequest {
  string id = 1;
}

message DeleteUserResponse {
  int32 status = 1;
  string error = 2;
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  string id = 1;
  string email = 2;
  string password = 3;
  int32 status = 4;
  string error = 5;
}



